Modificación Servicio remoto

--- a/force-app/main/default/classes/CaseTriggerHandler.cls
+++ b/force-app/main/default/classes/CaseTriggerHandler.cls
@@ -11,6 +11,7 @@ public without sharing class CaseTriggerHandler {
     public static void beforeUpdate(List<Case> newCaseList, Map<Id, Case> oldCaseMap){
         CaseTriggerHelper.validacionEstado(newCaseList, oldCaseMap);
         CaseTriggerHelper.informacionCompleta(newCaseList, oldCaseMap);
+        CaseTriggerHelper.validacionTipo(newCaseList, oldCaseMap);
         CaseTriggerHelper.solventarPregunta(newCaseList, oldCaseMap);
         CaseTriggerHelper.aceptaRespuesta(newCaseList, oldCaseMap);
         CaseTriggerHelper.actualizacionDescripcion(newCaseList, oldCaseMap);
