--- a/force-app/main/default/classes/CaseTriggerHandler.cls
+++ b/force-app/main/default/classes/CaseTriggerHandler.cls
@@ -6,10 +6,12 @@ public without sharing class CaseTriggerHandler {
     
     public static void afterInsert(List<Case> newCaseList){
         CaseTriggerHelper.validacionCorreoNuevo(newCaseList);
+        CaseTriggerHelper.createIssueJira(newCaseList);
     }
     
     public static void beforeUpdate(List<Case> newCaseList, Map<Id, Case> oldCaseMap){
         CaseTriggerHelper.validacionEstado(newCaseList, oldCaseMap);
+        CaseTriggerHelper.validacionSubEstado(newCaseList, oldCaseMap);
         CaseTriggerHelper.informacionCompleta(newCaseList, oldCaseMap);
         CaseTriggerHelper.validacionTipo(newCaseList, oldCaseMap);
         CaseTriggerHelper.solventarPregunta(newCaseList, oldCaseMap);
@@ -26,7 +28,7 @@ public without sharing class CaseTriggerHandler {
     }
     
     public static void afterUpdate(List<Case> newCaseList, Map<Id, Case> oldCaseMap){
-        
+    	CaseTriggerHelper.updateIssueJira(newCaseList);   
     }
     
     
